feat(cloud): enable purchasing credits
